# xGen

./: .gitignore  QUICK_REFERENCE.md  README.md
backend/: .env.example  .gitignore  README.md  package.json  test-models.ts
backend/src/: config.ts  index.ts
backend/src/gemini/: generator.ts  mockGenerator.ts  prompts.ts
backend/src/ipfs/: storage.ts
backend/src/multiversx/: listener.ts  oracle.ts
backend/src/routes/: generation.ts
backend/src/services/generation/: compiler.ts  errorFixer.ts  healingLoop.ts  projectGenerator.ts  streamManager.ts
backend/temp/contract-1767225687106/: Cargo.toml
backend/temp/contract-1767225687106/meta/: Cargo.toml
backend/temp/contract-1767225743451/src/: lib.rs
backend/temp/contract-1767226001412/src/: lib.rs
backend/temp/contract-1767226401190/src/: lib.rs
backend/temp/contract-1768328282258/src/: lib.rs
backend/temp/contract-1768328310153/src/: lib.rs
contract/: .gitignore  Cargo.toml
contract/meta/: Cargo.toml
contract/scenarios/: contract.scen.json
contract/src/: contract.rs
contract/tests/: contract_scenario_go_test.rs  contract_scenario_rs_test.rs
contract/wasm/: Cargo.toml
contract/wasm/src/: lib.rs
frontend/: .gitignore  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: GenerateForm.tsx  GenerationStudio.tsx  GenerationsList.tsx
frontend/src/lib/: contract.ts  ipfs.ts  sseClient.ts
