[package]
name = "contract"
version = "0.0.0"
edition = "2024"
publish = false
authors = ["you"]

[lib]
path = "src/contract.rs"

[dependencies.multiversx-sc]
version = "0.64.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.64.0"

[workspace]
members = [
    ".",
    "meta",
]
